--- a/src/SFA.Apprenticeships.Infrastructure.FAAUnitTests/packages.config
+++ b/src/SFA.Apprenticeships.Infrastructure.FAAUnitTests/packages.config
@@ -4,5 +4,9 @@
   <package id="AutoMapper" version="4.1.1" targetFramework="net452" />
   <package id="FluentAssertions" version="4.2.1" targetFramework="net452" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.7.0.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
+  <package id="RestSharp" version="105.1.0" targetFramework="net452" />
+  <package id="Sendgrid" version="5.1.0" targetFramework="net452" />
+  <package id="SendGrid.SmtpApi" version="1.2.1" targetFramework="net452" />
   <package id="WindowsAzure.ServiceBus" version="3.0.1" targetFramework="net452" />
 </packages>
