--- a/src/SFA.Apprenticeships.Web.Candidate.AcceptanceTests/packages.config
+++ b/src/SFA.Apprenticeships.Web.Candidate.AcceptanceTests/packages.config
@@ -6,13 +6,14 @@
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net451" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net451" />
   <package id="NUnit" version="2.6.4" targetFramework="net451" />
-  <package id="Selenium.Support" version="2.47.0" targetFramework="net451" />
-  <package id="Selenium.WebDriver" version="2.47.0" targetFramework="net451" />
+  <package id="Selenium.Support" version="2.53.0" targetFramework="net451" />
+  <package id="Selenium.WebDriver" version="2.53.0" targetFramework="net451" />
   <package id="SlowCheetah" version="2.5.15" targetFramework="net451" />
-  <package id="SpecBind" version="1.5.3.193" targetFramework="net451" />
-  <package id="SpecBind.Selenium" version="1.5.3.193" targetFramework="net451" />
-  <package id="SpecBindGeneratorPlugin.SpecFlow" version="1.5.3.193" targetFramework="net451" />
-  <package id="SpecFlow" version="1.9.0" targetFramework="net451" />
+  <package id="SpecBind" version="1.7.0.268" targetFramework="net451" />
+  <package id="SpecBind.Selenium" version="1.7.0.268" targetFramework="net451" />
+  <package id="SpecBindGeneratorPlugin.SpecFlow" version="1.7.0.268" targetFramework="net451" />
+  <package id="SpecFlow" version="2.0.0" targetFramework="net451" />
+  <package id="SpecFlow.CustomPlugin" version="2.0.0" targetFramework="net451" />
   <package id="SpecFlow.NUnit" version="1.1.1" targetFramework="net451" />
   <package id="structuremap" version="3.1.6.186" targetFramework="net451" />
 </packages>
