--- a/src/SFA.Apprenticeships.Web.Candidate/Web.Prod.config
+++ b/src/SFA.Apprenticeships.Web.Candidate/Web.Prod.config
@@ -57,7 +57,7 @@
   <nlog:nlog>
     <nlog:variable name="environment" value="PROD" xdt:Transform="SetAttributes(value)" xdt:Locator="Match(name)"/>
     <nlog:rules>
-      <nlog:logger name="*" minlevel="Debug" xdt:Transform="SetAttributes(minlevel)" xdt:Locator="Match(name)"/>
+      <nlog:logger name="*" minlevel="Info" xdt:Transform="SetAttributes(minlevel)" xdt:Locator="Match(name)"/>
     </nlog:rules>
   </nlog:nlog>
 </configuration>
