--- a/src/SFA.Apprenticeships.Application.Interfaces/SFA.Apprenticeships.Application.Interfaces.csproj
+++ b/src/SFA.Apprenticeships.Application.Interfaces/SFA.Apprenticeships.Application.Interfaces.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Generic\Pageable.cs" />
     <Compile Include="Locations\ErrorCodes.cs" />
     <Compile Include="Locations\IAddressSearchService.cs" />
+    <Compile Include="Locations\IGeoCodeLookupService.cs" />
     <Compile Include="Locations\IPostalAddressSearchService.cs" />
     <Compile Include="Messaging\BaseRequest.cs" />
     <Compile Include="Communications\CommunicationToken.cs" />
