--- a/src/SFA.Apprenticeships.Application.UnitTests/SFA.Apprenticeships.Application.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Application.UnitTests/SFA.Apprenticeships.Application.UnitTests.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Services\Candidate\Strategies\Builders\SaveCandidateStrategyBuilder.cs" />
     <Compile Include="Services\Candidate\Strategies\QueuedLegacySaveCandidateStrategyTests.cs" />
     <Compile Include="Services\Candidate\Strategies\SaveCandidateStrategyTests.cs" />
+    <Compile Include="Services\Location\GeoCodingServiceTests.cs" />
     <Compile Include="Services\Location\LocationSearchServiceTests.cs" />
     <Compile Include="Services\Location\PostalAddressSearchServiceTests.cs" />
     <Compile Include="Services\Provider\GetVacancyPartiesTests.cs" />
@@ -289,6 +290,10 @@
     <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Common\SFA.Apprenticeships.Infrastructure.Common.csproj">
       <Project>{78B1F2A1-DCC3-4ED3-8CE0-16E0781B59FA}</Project>
       <Name>SFA.Apprenticeships.Infrastructure.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Postcode\SFA.Apprenticeships.Infrastructure.Postcode.csproj">
+      <Project>{ABD48D09-C35E-42CE-8A4D-81550C2B8554}</Project>
+      <Name>SFA.Apprenticeships.Infrastructure.Postcode</Name>
     </ProjectReference>
     <ProjectReference Include="..\SFA.Infrastructure\SFA.Infrastructure.csproj">
       <Project>{1f500137-c8e9-49aa-886e-1922d9d870eb}</Project>
