--- a/src/SFA.Apprenticeships.Application.Provider/SFA.Apprenticeships.Application.Provider.csproj
+++ b/src/SFA.Apprenticeships.Application.Provider/SFA.Apprenticeships.Application.Provider.csproj
@@ -78,6 +78,17 @@
       <HintPath>..\packages\CuttingEdge.Conditions.1.2.0.0\lib\NET35\CuttingEdge.Conditions.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="SFA.Apprenticeships.Application.UserAccount">
+      <HintPath>..\SFA.Apprenticeships.Application.UserAccount\bin\Local\SFA.Apprenticeships.Application.UserAccount.dll</HintPath>
+    </Reference>
+    <Reference Include="SFA.Apprenticeships.Domain.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\SFA.Apprenticeships.Domain.Entities\bin\Local\SFA.Apprenticeships.Domain.Entities.dll</HintPath>
+    </Reference>
+    <Reference Include="SFA.Apprenticeships.Domain.Interfaces, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\SFA.Apprenticeships.Domain.Interfaces\bin\Local\SFA.Apprenticeships.Domain.Interfaces.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
@@ -87,6 +98,8 @@
     </Compile>
     <Compile Include="ProviderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Strategies\ISubmitContactMessageStrategy.cs" />
+    <Compile Include="Strategies\SubmitContactMessageStrategy.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SFA.Apprenticeships.Application.Interfaces\SFA.Apprenticeships.Application.Interfaces.csproj">
