US1431:LocalAuthority code assignment for single location vacancies

--- a/src/SFA.Apprenticeships.Application.Location/SFA.Apprenticeships.Application.Location.csproj
+++ b/src/SFA.Apprenticeships.Application.Location/SFA.Apprenticeships.Application.Location.csproj
@@ -90,9 +90,11 @@
     <Compile Include="GeoCodeLookupService.cs" />
     <Compile Include="IAddressLookupProvider.cs" />
     <Compile Include="IGeoCodeLookupProvider.cs" />
+    <Compile Include="ILocalAuthorityLookupProvider.cs" />
     <Compile Include="ILocationLookupProvider.cs" />
     <Compile Include="IPostalAddressLookupProvider.cs" />
     <Compile Include="IPostcodeLookupProvider.cs" />
+    <Compile Include="LocalAuthorityLookupService.cs" />
     <Compile Include="LocationSearchService.cs" />
     <Compile Include="PostalAddressSearchService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
