--- a/src/SFA.Apprenticeships.Application.UnitTests/SFA.Apprenticeships.Application.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Application.UnitTests/SFA.Apprenticeships.Application.UnitTests.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Services\Candidate\Strategies\Builders\SaveCandidateStrategyBuilder.cs" />
     <Compile Include="Services\Candidate\Strategies\QueuedLegacySaveCandidateStrategyTests.cs" />
     <Compile Include="Services\Candidate\Strategies\SaveCandidateStrategyTests.cs" />
+    <Compile Include="Services\Location\LocalAuthorityLookupServiceTests.cs" />
     <Compile Include="Services\Location\GeoCodingServiceTests.cs" />
     <Compile Include="Services\Location\LocationSearchServiceTests.cs" />
     <Compile Include="Services\Location\PostalAddressSearchServiceTests.cs" />
