1. Unit Tests for Sending contactus message. 2. Created mapping between contact us view model.

--- a/src/SFA.Apprenticeships.Domain.Entities/SFA.Apprenticeships.Domain.Entities.csproj
+++ b/src/SFA.Apprenticeships.Domain.Entities/SFA.Apprenticeships.Domain.Entities.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Candidates\SavedSearch.cs" />
     <Compile Include="Candidates\SavedSearchHelper.cs" />
     <Compile Include="Candidates\TrainingCourse.cs" />
+    <Compile Include="Communication\ProviderContactMessage.cs" />
     <Compile Include="Communication\ContactMessageTypes.cs" />
     <Compile Include="Communication\SavedSearchAlert.cs" />
     <Compile Include="Communication\ContactMessage.cs" />
