--- a/src/SFA.Apprenticeships.Application.UnitTests/SFA.Apprenticeships.Application.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Application.UnitTests/SFA.Apprenticeships.Application.UnitTests.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProviderUserAccount\ResendEmailVerificationCodeStrategyTests.cs" />
     <Compile Include="ProviderUserAccount\SendEmailVerificationCodeStrategyTests.cs" />
+    <Compile Include="Provider\SubmitContactMessageStrategyTest.cs" />
     <Compile Include="Services\Candidate\Strategies\AuthenticateCandidateStrategyTests\AuthenticateCandidateStrategyTests.cs" />
     <Compile Include="Services\Candidate\Strategies\Builders\QueuedLegacySaveCandidateStrategyBuilder.cs" />
     <Compile Include="Services\Candidate\Strategies\Builders\SaveCandidateStrategyBuilder.cs" />
