--- a/src/SFA.Apprenticeships.Data.Migrate.Faa/SFA.Apprenticeships.Data.Migrate.Faa.csproj
+++ b/src/SFA.Apprenticeships.Data.Migrate.Faa/SFA.Apprenticeships.Data.Migrate.Faa.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Local</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{73C8A0C0-3B18-4ED6-8D14-15F3E009C26C}</ProjectGuid>
+    <ProjectGuid>{A8BFD333-2D6B-4D91-B544-97C269212B06}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SFA.Apprenticeships.Data.Migrate</RootNamespace>
-    <AssemblyName>SFA.Apprenticeships.Data.Migrate</AssemblyName>
+    <RootNamespace>SFA.Apprenticeships.Data.Migrate.Faa</RootNamespace>
+    <AssemblyName>SFA.Apprenticeships.Data.Migrate.Faa</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -87,8 +87,16 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Dapper, Version=1.12.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Dapper-Async.1.03\lib\net45\Dapper.dll</HintPath>
+    <Reference Include="MongoDB.Bson, Version=2.2.3.3, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MongoDB.Bson.2.2.3\lib\net45\MongoDB.Bson.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="MongoDB.Driver, Version=2.2.3.3, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MongoDB.Driver.2.2.3\lib\net45\MongoDB.Driver.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="MongoDB.Driver.Core, Version=2.2.3.3, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MongoDB.Driver.Core.2.2.3\lib\net45\MongoDB.Driver.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -101,34 +109,37 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AvmsSyncRepository.cs" />
-    <Compile Include="BaseMutateTarget.cs" />
-    <Compile Include="IAvmsSyncRepository.cs" />
-    <Compile Include="MutateTarget.cs" />
-    <Compile Include="IMutateTarget.cs" />
-    <Compile Include="DummyMutateTarget.cs" />
-    <Compile Include="Tables.cs" />
-    <Compile Include="IGenericSyncRepository.cs" />
-    <Compile Include="GenericSyncRepository.cs" />
-    <Compile Include="Controller.cs" />
-    <Compile Include="MigrateFromAvmsConfiguration.cs" />
+    <Compile Include="Entities\Mongo\ApprenticeshipApplication.cs" />
+    <Compile Include="Entities\Mongo\Candidate.cs" />
+    <Compile Include="Entities\Mongo\User.cs" />
+    <Compile Include="Entities\Mongo\Vacancy.cs" />
+    <Compile Include="Entities\Sql\Application.cs" />
+    <Compile Include="Mappers\ApplicationMappers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\Mongo\ApprenticeshipApplicationsRepository.cs" />
+    <Compile Include="Repository\Mongo\CandidateRepository.cs" />
+    <Compile Include="Repository\Mongo\UserRepository.cs" />
+    <Compile Include="Repository\Sql\ApplicationTable.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Sql\SFA.Apprenticeships.Infrastructure.Repositories.Sql.csproj">
-      <Project>{b633ee4e-7a58-4acf-bbd9-0b19730b22fd}</Project>
-      <Name>SFA.Apprenticeships.Infrastructure.Repositories.Sql</Name>
+    <ProjectReference Include="..\SFA.Apprenticeships.Data.Migrate\SFA.Apprenticeships.Data.Migrate.csproj">
+      <Project>{73c8a0c0-3b18-4ed6-8d14-15f3e009c26c}</Project>
+      <Name>SFA.Apprenticeships.Data.Migrate</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Mongo\SFA.Apprenticeships.Infrastructure.Repositories.Mongo.csproj">
+      <Project>{a4de4af3-f06d-4d0f-af2e-e72a11bab49b}</Project>
+      <Name>SFA.Apprenticeships.Infrastructure.Repositories.Mongo</Name>
     </ProjectReference>
     <ProjectReference Include="..\SFA.Infrastructure\SFA.Infrastructure.csproj">
       <Project>{1f500137-c8e9-49aa-886e-1922d9d870eb}</Project>
       <Name>SFA.Infrastructure</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
