--- a/src/SFA.Apprenticeships.Data.Migrate.Faa/SFA.Apprenticeships.Data.Migrate.Faa.csproj
+++ b/src/SFA.Apprenticeships.Data.Migrate.Faa/SFA.Apprenticeships.Data.Migrate.Faa.csproj
@@ -115,11 +115,13 @@
     <Compile Include="Entities\Mongo\Vacancy.cs" />
     <Compile Include="Entities\Sql\Application.cs" />
     <Compile Include="Mappers\ApplicationMappers.cs" />
+    <Compile Include="MigrationProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\Mongo\ApprenticeshipApplicationsRepository.cs" />
     <Compile Include="Repository\Mongo\CandidateRepository.cs" />
     <Compile Include="Repository\Mongo\UserRepository.cs" />
     <Compile Include="Repository\Sql\ApplicationTable.cs" />
+    <Compile Include="Repository\Sql\VacancyRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -134,6 +136,10 @@
     <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Mongo\SFA.Apprenticeships.Infrastructure.Repositories.Mongo.csproj">
       <Project>{a4de4af3-f06d-4d0f-af2e-e72a11bab49b}</Project>
       <Name>SFA.Apprenticeships.Infrastructure.Repositories.Mongo</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Sql\SFA.Apprenticeships.Infrastructure.Repositories.Sql.csproj">
+      <Project>{b633ee4e-7a58-4acf-bbd9-0b19730b22fd}</Project>
+      <Name>SFA.Apprenticeships.Infrastructure.Repositories.Sql</Name>
     </ProjectReference>
     <ProjectReference Include="..\SFA.Infrastructure\SFA.Infrastructure.csproj">
       <Project>{1f500137-c8e9-49aa-886e-1922d9d870eb}</Project>
