US1217: Should support incremental updates

--- a/src/SFA.Apprenticeships.Data.Migrate.Faa/SFA.Apprenticeships.Data.Migrate.Faa.csproj
+++ b/src/SFA.Apprenticeships.Data.Migrate.Faa/SFA.Apprenticeships.Data.Migrate.Faa.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Repository\Mongo\CandidateRepository.cs" />
     <Compile Include="Repository\Mongo\UserRepository.cs" />
     <Compile Include="Repository\Sql\ApplicationTable.cs" />
+    <Compile Include="Repository\Sql\SyncRepository.cs" />
     <Compile Include="Repository\Sql\VacancyRepository.cs" />
   </ItemGroup>
   <ItemGroup>
