--- a/src/SFA.Apprenticeships.Data.Migrate.Faa/SFA.Apprenticeships.Data.Migrate.Faa.csproj
+++ b/src/SFA.Apprenticeships.Data.Migrate.Faa/SFA.Apprenticeships.Data.Migrate.Faa.csproj
@@ -87,6 +87,10 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dapper, Version=1.40.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dapper.1.42\lib\net45\Dapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="MongoDB.Bson, Version=2.2.3.3, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MongoDB.Bson.2.2.3\lib\net45\MongoDB.Bson.dll</HintPath>
       <Private>True</Private>
@@ -109,16 +113,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IMigrationProcessor.cs" />
+    <Compile Include="IVacancyApplicationsUpdater.cs" />
+    <Compile Include="VacancyApplicationsMigrationProcessor.cs" />
     <Compile Include="Configuration\MongoConfiguration.cs" />
-    <Compile Include="Entities\Mongo\ApprenticeshipApplication.cs" />
+    <Compile Include="Entities\Mongo\VacancyApplication.cs" />
     <Compile Include="Entities\Mongo\Candidate.cs" />
     <Compile Include="Entities\Mongo\User.cs" />
     <Compile Include="Entities\Mongo\Vacancy.cs" />
     <Compile Include="Entities\Sql\Application.cs" />
+    <Compile Include="Entities\Sql\SyncParams.cs" />
     <Compile Include="Mappers\ApplicationMappers.cs" />
     <Compile Include="MigrationProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\Mongo\ApprenticeshipApplicationsRepository.cs" />
+    <Compile Include="Repository\Mongo\VacancyApplicationsRepository.cs" />
     <Compile Include="Repository\Mongo\CandidateRepository.cs" />
     <Compile Include="Repository\Mongo\UserRepository.cs" />
     <Compile Include="Repository\Sql\ApplicationTable.cs" />
